[gd_scene load_steps=7 format=3 uid="uid://cak1be4rb3wtn"]

[ext_resource type="Script" uid="uid://bld6o648oppau" path="res://BaseScripts/StateMachine.gd" id="1"]
[ext_resource type="AudioStream" uid="uid://syy7nidfx0v6" path="res://Assets/music/sound2.wav" id="2"]
[ext_resource type="Script" uid="uid://3am7sn4wkjgc" path="res://Player/Weapons/Sword/Sword.gd" id="3"]
[ext_resource type="Script" uid="uid://wrmvwc1i8pyy" path="res://Player/Weapons/Sword/SwordStateDefault.gd" id="4"]
[ext_resource type="Script" uid="uid://bqwvloitmqgvl" path="res://Player/Weapons/Sword/SwordStateAttack.gd" id="5"]
[ext_resource type="Script" uid="uid://c5y7yfy5bi1xc" path="res://Player/Weapons/Sword/SwordStateShove.gd" id="6"]

[node name="Sword" type="Node2D"]
script = ExtResource("3")

[node name="HitArea" type="Area2D" parent="."]
collision_layer = 0

[node name="ColliderAttack" type="CollisionPolygon2D" parent="HitArea"]
polygon = PackedVector2Array(-0.0119362, 0.000972748, -6.60901, 28.7503, 8.59898, 32.9169)

[node name="ColliderShove" type="CollisionPolygon2D" parent="HitArea"]
polygon = PackedVector2Array(-4.75389, -3.55023, 24.5797, -12.2364, 25.8613, 12.8253, -5.46587, 2.99998)

[node name="Audio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2")
volume_db = -14.0

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("1")

[node name="Default" type="Node" parent="StateMachine"]
script = ExtResource("4")

[node name="Attack" type="Node" parent="StateMachine"]
script = ExtResource("5")

[node name="Shove" type="Node" parent="StateMachine"]
script = ExtResource("6")
shove_strength = null
